[gd_scene load_steps=3 format=3 uid="uid://e5uhcfcdk1d4"]

[ext_resource type="Script" path="res://emergency.gd" id="1_gy17o"]
[ext_resource type="FontFile" uid="uid://gwcpcgvtp3cq" path="res://assets/fonts/joystix.monospace-regular.otf" id="2_x4yk0"]

[node name="Emergency" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gy17o")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.160784, 0.160784, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2

[node name="VSlider" type="VSlider" parent="HBoxContainer"]
layout_mode = 2
max_value = 10.0

[node name="VSlider2" type="VSlider" parent="HBoxContainer"]
layout_mode = 2
max_value = 20.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button2" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button3" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button4" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button5" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Padding1" type="ColorRect" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_x4yk0")
theme_override_font_sizes/font_size = 28
text = "EMERGENCY
LOCKDOWN
ACTIVATED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Padding2" type="ColorRect" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonL" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonR" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VSlider3" type="VSlider" parent="HBoxContainer"]
layout_mode = 2
max_value = 30.0

[node name="VSlider4" type="VSlider" parent="HBoxContainer"]
layout_mode = 2
max_value = 40.0

[node name="TimerL" type="Timer" parent="."]

[node name="TimerR" type="Timer" parent="."]

[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer2/ButtonL" to="." method="_on_button_l_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer2/ButtonR" to="." method="_on_button_r_pressed"]
[connection signal="timeout" from="TimerL" to="." method="_on_timer_l_timeout"]
[connection signal="timeout" from="TimerR" to="." method="_on_timer_r_timeout"]
